[package]
name = "randompass"
edition = "2021"
version = "0.2.5"
description = "🔑 A simple static password generator."
keywords = ["password", "password-generator", "random", "key", "security-tools"]
categories = ["cryptography"]
repository = "https://github.com/mihaigalos/randompass"
license = "MIT"

[dependencies]
autoclap = "0.2.1"
clap = "3.0.13"
custom_error = "1.9.2"
rand = "0.8"
