[package]
name = "randompass"
edition = "2021"
version = "1.0.0"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
description = "🔑 A simple static password generator."
keywords = ["password", "password-generator", "random", "key", "security-tools"]
categories = ["cryptography"]
repository = "https://github.com/mihaigalos/randompass"
license = "MIT"

[dependencies]
autoclap = "0.3.15"
clap = { version = "4.3.21", features = ["cargo", "string"] }
custom_error = "1.9.2"
rand = "0.8"
